--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "java.dependency.packagePresentation": "hierarchical"
+    "java.dependency.packagePresentation": "hierarchical",
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "d:\\BoUjOu\\Mecha_Tech\\APP\\mongo-java-driver-3.12.12.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.base.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.controls.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.fxml.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.graphics.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.media.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.swing.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
+        "d:\\univ programs\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar"
+    ]
 }
