--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "java.dependency.packagePresentation": "hierarchical"
+  "java.dependency.packagePresentation": "flat",
+  "java.project.referencedLibraries": [
+    "lib/**/*.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.base.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.controls.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.fxml.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.graphics.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.media.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.swing.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx.web.jar",
+    "c:\\java\\javafx\\javafx-sdk-19.0.2.1\\lib\\javafx-swt.jar"
+  ]
 }
