--- a/.classpath
+++ b/.classpath
@@ -6,27 +6,27 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\BoUjOu\Mecha_Tech\APP/mongo-java-driver-3.12.12.jar">
+	<classpathentry kind="lib" path="C:/java/javafx/nosql jar/mongo-java-driver-3.12.12.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.base.jar">
+	<classpathentry kind="lib" path="C:/java/resour/slf4j-simple-1.6.1.jar/slf4j-simple-1.6.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.controls.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/CalendarFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.fxml.jar">
+	<classpathentry kind="lib" path="C:/java/resour/jfoenix/jfoenix-8.0.10.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
