--- a/.classpath
+++ b/.classpath
@@ -6,67 +6,52 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/java/javafx/nosql jar/mongo-java-driver-3.12.12.jar">
+	<classpathentry kind="lib" path="D:\BoUjOu\Mecha_Tech\APP/mongo-java-driver-3.12.12.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/java/resour/slf4j-simple-1.6.1.jar/slf4j-simple-1.6.1.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/CalendarFX">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/java/resour/jfoenix/jfoenix-8.0.10.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.fxml.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.base.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.graphics.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.media.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.fxml.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.swing.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.web.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.media.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.swing.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.web.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx-swt.jar">
+	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx-swt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
