--- a/.classpath
+++ b/.classpath
@@ -26,11 +26,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/java/resour/jfoenix/jfoenix-8.0.10.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	
 		<classpathentry kind="lib" path="C:\java\javafx\javafx-sdk-19.0.2.1\lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -71,6 +67,18 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:\java\resour\materialfw/materialfx-11.15.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+
+		<classpathentry kind="lib" path="C:\java\resour\materialfw/virtualizedfx-11.2.6.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+
 
 	<classpathentry kind="output" path="bin"/>
 </classpath>
