--- a/.classpath
+++ b/.classpath
@@ -56,6 +56,95 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:\java\resour\tilesfx/countries-17.0.23.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/heatmap-17.0.12.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-base-17.0.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-base-17.0.2-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-controls-17.0.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-controls-17.0.2-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-graphics-17.0.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-graphics-17.0.2-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-media-17.0.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-swing-17.0.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-swing-17.0.2-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-web-17.0.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-web-17.0.2-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+			<classpathentry kind="lib" path="C:\java\resour\tilesfx/tilesfx-17.1.17.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+			<classpathentry kind="lib" path="C:\java\resour\tilesfx/toolbox-17.0.35.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+			<classpathentry kind="lib" path="C:\java\resour\tilesfx/toolboxfx-17.0.33.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+
+	
+	
 
 	<classpathentry kind="output" path="bin"/>
 </classpath>
+
