--- a/.classpath
+++ b/.classpath
@@ -141,9 +141,50 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-f
+
 	
+			<classpathentry kind="lib" path="C:\java\resour\itext/itextpdf-5.4.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+
 	
+			<classpathentry kind="lib" path="C:\java\resour\swingfx/javafx-swing-20.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+			<classpathentry kind="lib" path="C:\java\resour\swingfx/javafx-graphics-20-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+			<classpathentry kind="lib" path="C:\java\resour\swingfx/javafx-graphics-20.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+			<classpathentry kind="lib" path="C:\java\resour\swingfx/javafx-graphics-20-linux.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+			<classpathentry kind="lib" path="C:\java\resour\swingfx/javafx-swing-20.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+
+			<classpathentry kind="lib" path="C:\java\resour\swingfx/javafx-swing-20-linux.jarr">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 
 	<classpathentry kind="output" path="bin"/>
 </classpath>
