--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+		<classpathentry kind="lib" path="D:\BoUjOu\Mecha_Tech\APP/itextpdf-5.4.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
