--- a/.classpath
+++ b/.classpath
@@ -56,98 +56,98 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:\java\resour\tilesfx/countries-17.0.23.jar">
+	<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/countries-17.0.23.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/heatmap-17.0.12.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/heatmap-17.0.12.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
+	</classpathentry> -->
 	
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-base-17.0.2.jar">
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-base-17.0.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
+	</classpathentry> -->
 	
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-base-17.0.2-linux.jar">
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-base-17.0.2-linux.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
+	</classpathentry> -->
 	
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-controls-17.0.2.jar">
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-controls-17.0.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
+	</classpathentry> -->
 	
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-controls-17.0.2-linux.jar">
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-controls-17.0.2-linux.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-graphics-17.0.2.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-graphics-17.0.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-graphics-17.0.2-linux.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-graphics-17.0.2-linux.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-media-17.0.2.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-media-17.0.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-	
+	</classpathentry> -->
+<!-- 	
 		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-swing-17.0.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-swing-17.0.2-linux.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-swing-17.0.2-linux.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-web-17.0.2.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-web-17.0.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-		<classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-web-17.0.2-linux.jar">
+	</classpathentry> -->
+		<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/javafx-web-17.0.2-linux.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-			<classpathentry kind="lib" path="C:\java\resour\tilesfx/tilesfx-17.1.17.jar">
+	</classpathentry> -->
+			<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/tilesfx-17.1.17.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-			<classpathentry kind="lib" path="C:\java\resour\tilesfx/toolbox-17.0.35.jar">
+	</classpathentry> -->
+			<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/toolbox-17.0.35.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
-			<classpathentry kind="lib" path="C:\java\resour\tilesfx/toolboxfx-17.0.33.jar">
+	</classpathentry> -->
+			<!-- <classpathentry kind="lib" path="C:\java\resour\tilesfx/toolboxfx-17.0.33.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
+	</classpathentry> -->
 
 	
-			<classpathentry kind="lib" path="C:\java\resour\itext/itextpdf-5.4.0.jar">
+			<!-- <classpathentry kind="lib" path="C:\java\resour\itext/itextpdf-5.4.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
-	</classpathentry>
+	</classpathentry> -->
 
 
 
