--- a/.classpath
+++ b/.classpath
@@ -57,4 +57,15 @@
 		</attributes>
 	</classpathentry>
 	
+		<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/pdfbox-app-2.0.28.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+			<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/itextpdf-5.5.9.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	
 </classpath>
