--- a/.classpath
+++ b/.classpath
@@ -11,52 +11,52 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\BoUjOu\Mecha_Tech\APP/mongo-java-driver-3.12.12.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/mongo-java-driver-3.12.12.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.base.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.fxml.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.fxml.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.graphics.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.media.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.media.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.swing.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.swing.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx.web.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx.web.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\univ programs\javafx-sdk-17.0.1\lib/javafx-swt.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/javafx-swt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:\BoUjOu\Mecha_Tech\APP\itextpdf-5.4.0.jar">
+	<classpathentry kind="lib" path="E:\aymen\javavs\javafx\javafx-sdk-19.0.2.1\lib/itextpdf-5.5.9.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
